<resources>
    <string name="app_name">Medical Kit</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Medical Kit</string>
    <string name="nav_header_subtitle">MedicalKit.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="editText2">password</string>
    <string name="editText3">Email-ID</string>
    <string name="editText4">Phone Number</string>
    <string name="editText">Name</string>
    <string name="editText6">sex</string>
    <string name="Sex">Sex</string>
</resources>
