<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_signin"
            android:icon="@drawable/ic_face_black_24dp"
            android:title="Sign-in" />
        <item
            android:id="@+id/nav_Donate"
            android:icon="@drawable/ic_favorite_black_24dp"
            android:title="Donate" />
        <item
            android:id="@+id/nav_online"
            android:icon="@drawable/ic_local_pharmacy_black_24dp"
            android:title="Online Mediciene" />
        <item
            android:id="@+id/nav_Report"
            android:icon="@drawable/ic_local_phone_black_24dp"
            android:title="Report" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send" />
        </menu>
    </item>

</menu>
