<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.medicalkit.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_signin"
        android:name="com.example.medicalkit.ui.home.SignIn"
        android:label="SignIn"
        tools:layout="@layout/sign_in_fragment" />

    <fragment
        android:id="@+id/nav_Donate"
        android:name="com.example.medicalkit.ui.home.Donate"
        android:label="Donate"
        tools:layout="@layout/donate_fragment" />

    <fragment
        android:id="@+id/nav_online"
        android:name="com.example.medicalkit.ui.home.mediciene"
        android:label="Mediciene"
        tools:layout="@layout/mediciene_fragment" />

    <fragment
        android:id="@+id/nav_Report"
        android:name="com.example.medicalkit.ui.home.report"
        android:label="@string/menu_tools"
        tools:layout="@layout/report_fragment" />


    <fragment
        android:id="@+id/nav_send"
        android:name="com.example.medicalkit.ui.home.Send"
        android:label="@string/menu_share"
        tools:layout="@layout/send_fragment" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.example.medicalkit.ui.home.Share"
        android:label="Send"
        tools:layout="@layout/share_fragment" />
</navigation>